Rework Gradle build scripts to support IP